gs/base/gxblend.h
@@ -99,6 +99,9 @@ typedef pdf14_parent_cs_params_s pdf14_parent_cs_params_t;
 void smask_luminosity_mapping(int num_rows, int num_cols, int n_chan, int row_stride, 
                          int plane_stride, byte *src, const byte *des, bool isadditive,
                             bool SMask_is_CIE, gs_transparency_mask_subtype_t SMask_SubType);
+void smask_blend(byte *src, int width, int height, int rowstride, 
+                 int planestride);
+
 void smask_copy(int num_rows, int num_cols, int row_stride, 
                          byte *src, const byte *des);
 void smask_icc(int num_rows, int num_cols, int n_chan, int row_stride, 
